CMake: MacOSX framework build fix (#13945)
* CMake/helpers/GdalVersion: fix MacOS framework build with BYPRODUCTS in custom target

In a standard build the compiler finds
`gcore/gdal_version_full/gdal_version.h` implicitly from the
search directory.

In a framework build the file must be copied into the app bundle.
However, because Ninja is strict, it refuses to do so unless the file
is explicitely associated with a rule known to create it.

See the below error when building with `GDAL_ENABLE_MACOSX_FRAMEWORK`:

`ninja: error: 'gcore/gdal_version_full/gdal_version.h', needed by 'gdal.framework/Versions/3.13/Headers/gdal_version.h', missing and no known rule to make it`

`BYPRODUCTS` explicitely registers the header as a byproduct of the
custom CMake target so that Ninja has an associated rule with it.

Further reading:

 - https://cmake.org/cmake/help/latest/command/add_custom_target.html
 - https://cmake.org/cmake/help/latest/policy/CMP0058.html

* CMake/gdal.cmake: comply with Apple metadata policy when building MacOS framework

When `GDAL_ENABLE_MACOSX_FRAMEWORK` is used, the framework produced by
Cmake does not comply with the requirements set by the Apple
documentation.

The CMake target properties `MACOSX_FRAMEWORK_SHORT_VERSION_STRING` and
`MACOSX_FRAMEWORK_BUNDLE_VERSION`, which map respectively to
`CFBundleShortVersionString` and `CFBundleVersion` in the produced
`Info.plist` of the framework, must respect the following guidelines:

- `CFBundleShortVersionString`: "This key is a user-visible string for
  the version of the bundle. The required format is three
  period-separated integers, such as 10.14.1. The string can only
  contain numeric characters (0-9) and periods."
  Source: https://developer.apple.com/documentation/bundleresources/information-property-list/cfbundleshortversionstring

- `CFBundleVersion`: "This key is a machine-readable string composed of
  one to three period-separated integers, such as 10.14.1. The string
  can only contain numeric

--- a/.github/workflows/cmake_builds.yml
+++ b/.github/workflows/cmake_builds.yml
@@ -663,12 +663,11 @@ jobs:
         mkdir -p $GITHUB_WORKSPACE/build
         export PKG_CONFIG_PATH=/opt/homebrew/Cellar/libxml2/lib/pkgconfig
         # FIXME: remove -DBUILD_PYTHON_BINDINGS=OFF. Python tests fail with "ModuleNotFoundError: No module named '_gdal'" with macos-12
-        cmake -Werror=dev -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/install-gdal ${CMAKE_OPTIONS} -DCMAKE_C_FLAGS=-Werror -DCMAKE_CXX_FLAGS=-Werror -DUSE_CCACHE=ON -DCMAKE_UNITY_BUILD=${CMAKE_UNITY_BUILD} -S "$GITHUB_WORKSPACE" -B "$GITHUB_WORKSPACE/build" -DWERROR_DEV_FLAG="-Werror=dev" -DBUILD_PYTHON_BINDINGS=OFF  "-DUSE_PRECOMPILED_HEADERS=ON"
+        cmake -Werror=dev -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/install-gdal ${CMAKE_OPTIONS} -DCMAKE_C_FLAGS=-Werror -DCMAKE_CXX_FLAGS=-Werror -DUSE_CCACHE=ON -DCMAKE_UNITY_BUILD=${CMAKE_UNITY_BUILD} -S "$GITHUB_WORKSPACE" -B "$GITHUB_WORKSPACE/build" -DWERROR_DEV_FLAG="-Werror=dev" -DBUILD_PYTHON_BINDINGS=OFF  "-DUSE_PRECOMPILED_HEADERS=ON" -DGDAL_ENABLE_MACOSX_FRAMEWORK=ON
         #PYTHON_CMD=$(cat $GITHUB_WORKSPACE/build/python_executable.txt) && $PYTHON_CMD -m pip install --user -r $GITHUB_WORKSPACE/autotest/requirements.txt
     - name: Build
       run: |
         cmake --build $GITHUB_WORKSPACE/build -j 3
-        otool -L $GITHUB_WORKSPACE/build/libgdal.dylib
     - name: test
       run: cmake --build $GITHUB_WORKSPACE/build --target quicktest
     - name: test (with ctest)
@@ -678,15 +677,9 @@ jobs:
         BUILD_NAME: "macos_build_brew"
     - name: Install
       run: cmake --build $GITHUB_WORKSPACE/build --target install -j 3
-    - name: Test post-install usage (with pkg-config)
+    - name: Test post-install usage (with macOSX Framework)
       run: |
-        ./autotest/postinstall/test_pkg-config.sh $GITHUB_WORKSPACE/install-gdal
-    - name: Test post-install usage (with gdal-config)
-      run: |
-        ./autotest/postinstall/test_gdal-config.sh $GITHUB_WORKSPACE/install-gdal
-    - name: Test post-install usage (with CMake)
-      run: |
-        ./autotest/postinstall/test_cmake.sh $GITHUB_WORKSPACE/install-gdal --dynamic --disable-odbc
+        ./autotest/postinstall/test_framework.sh $GITHUB_WORKSPACE/install-gdal
     - name: ccache statistics
       run: ccache -s
 
